@@ -23,10 +23,27 @@ class API_EXPORT Table
     protected:
         QString database;
         QString table;
+};
 
+class API_EXPORT AliasedTable : public Table
+{
+    public:
+        AliasedTable();
+        AliasedTable(const QString& database, const QString& table, const QString& alias);
+        AliasedTable(const AliasedTable& other);
+        virtual ~AliasedTable();
+
+        int operator ==(const AliasedTable& other) const;
+
+        QString getTableAlias() const;
+        void setTableAlias(const QString& value);
+
+    protected:
+        QString tableAlias;
 };
 
 int API_EXPORT qHash(Table table);
+int API_EXPORT qHash(AliasedTable table);
 
 
 #endif // TABLE_H
