@@ -4,6 +4,7 @@
         * [BUGFIX]: #2793 SqlEnterpriseFormatter plugin: Fixed formatting queries starting with EXPLAIN and EXPLAIN QUERY PLAN.
         * [BUGFIX]: #2786 Fixed double plugin names in config dialog for built-in plugins.
         * [BUGFIX]: Fixed dead-lock when fixing path for a database that pointed to inexisting file.
+        * [BUGFIX]: Fixed data editing for SQL queries joining the same table several times.
 
 [3.0.3]
         * [ADDED]: Added visual validation indicators to DbDialog, so user is informed why the "Ok" button is disabled at the moment.
